--- a/style.css
+++ b/style.css
@@ -151,7 +151,7 @@ body
 	color: #777;
 }
 
-.message-text
+li
 {
 	background: #0048AA;
 	color: #EEE;
@@ -159,11 +159,14 @@ body
 	border-radius: 14px 14px 0 14px;
 	justify-content: end;
 	justify-items: end;
+	padding: 5px;
+	margin: 15px;
+	margin-left:300px; 
 }
 
 .message-text ul
 {
-	padding-left: 300px;
+	/*padding-left: 300px;*/
 	list-style: none;
 	padding-top: 2px;
 	padding-bottom: 2px;
